<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_big">

        <TextView
            style="@style/TxtNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_txt_username" />

        <EditText
            android:id="@+id/username_register_edt"
            style="@style/TxtNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_txt_username_hint"
            android:singleLine="true" />

        <TextView
            style="@style/TxtNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_big"
            android:text="@string/common_txt_user_email" />

        <EditText
            android:id="@+id/email_register_edt"
            style="@style/TxtNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_txt_user_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <TextView
            style="@style/TxtNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_big"
            android:text="@string/common_txt_password" />

        <EditText
            android:id="@+id/password_register_edt"
            style="@style/TxtNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_txt_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            style="@style/TxtNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_big"
            android:text="@string/common_txt_confirm_password" />

        <EditText
            android:id="@+id/confirm_password_register_edt"
            style="@style/TxtNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_txt_confirm_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/register_btn"
            style="@style/BtnNormalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/common_txt_register" />
    </LinearLayout>
</RelativeLayout>
