<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TxtTitleActionBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/common_txt_login"
            android:textColor="@color/main_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_login_google"
            style="@style/BtnRedSocialStyle"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/login_social_google"
            android:textSize="@dimen/common_txt_size_big"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_login_facebook"
            style="@style/BtnBlueSocialStyle"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_social_facebook"
            android:textSize="@dimen/common_txt_size_big"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/btn_login_close"
            style="@style/BtnGraySocialStyle"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/common_txt_btn_close"
            android:textSize="@dimen/common_txt_size_big"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
