<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:progressanim="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconImageSplash"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/orange"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.onetech.otcore.view.customviews.ProgressAnimation
        android:id="@+id/splashProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        progressanim:animDrawable="@anim/anim_loading"
        android:layout_below="@+id/logo_container"/>

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_above="@+id/versionContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/main_color"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/background_button_green"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/common_txt_btn_retry"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/versionContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/common_txt_version_name"
            android:textColor="@color/core_green"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/core_green"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>